Do not increase gutter in .row elements to avoid horizontal scrollbar appearing

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -133,10 +133,10 @@ a:focus {
 
 /* Increase gutter to 34px */
 @media (min-width: 1199px) {
-  .row {
+/*  .row {
     margin-right: -17px;
     margin-left: -17px;
-  }
+  }*/
   [class^="col-"],
   [class^=" col-"] {
     padding-right: 17px;
