--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -6196,10 +6196,10 @@ a:focus {
   ====================================================== */
 /* Increase gutter to 34px */
 @media (min-width: 1199px) {
-  .row {
-    margin-right: -17px;
-    margin-left: -17px; }
-
+  /*  .row {
+      margin-right: -17px;
+      margin-left: -17px;
+    }*/
   [class^="col-"],
   [class^=" col-"] {
     padding-right: 17px;
